tests/test156.rael.exp
Error [1:11]: Expected a whole number
| log "A" + 65.12
|           ^
